<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btn_vietnamese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vietnamese"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"/>

</LinearLayout>
